# yamp

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  yamp.desktop
.github/workflows/: aur-publish.yml
qml/: AlbumDetail.qml  Albums.qml  ArtistDetail.qml  Artists.qml  BottomBar.qml  Main.qml  QueuePanel.qml  SettingsWindow.qml  SideBar.qml  SortableHeader.qml  Tracklist.qml
src/: AlbumModel.cpp  AlbumModel.h  ArtistModel.cpp  ArtistModel.h  CoverExtractor.cpp  CoverExtractor.h  CoverImageProvider.cpp  CoverImageProvider.h  LibraryWatcher.cpp  LibraryWatcher.h  MprisAdaptor.cpp  MprisAdaptor.h  MusicLibrary.cpp  MusicLibrary.h  PaVolumeController.cpp  PaVolumeController.h  PlayerBackend.cpp  PlayerBackend.h  PwVolumeController.cpp  PwVolumeController.h  QueueModel.cpp  QueueModel.h  ScanSession.cpp  ScanSession.h  Track.h  TrackModel.cpp  TrackModel.h  TrackQueue.cpp  TrackQueue.h  main.cpp  settings.cpp  settings.h
